Try to fix on iOS bar

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,7 +28,8 @@
   body,
   #__next {
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    min-height: -webkit-fill-available;
     margin: 0;
     padding: 0;
     overflow: hidden;
